podinfo/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: demo-podinfo
  name: podinfo
  namespace: default
spec:
  ports:
    - name: http
      port: 9898
      protocol: TCP
      targetPort: http
    - name: grpc
      port: 9999
      protocol: TCP
      targetPort: grpc
  selector:
    app: podinfo
  type: ClusterIP
