podinfo/virtualService.yaml

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: podinfo
spec:
  gateways:
  - istio-system/cluster-gateway
  - mesh
  hosts:
  - podinfo.localhost
  http:
  - name: podinfo
    route:
    - destination:
        host: podinfo
        port:
          number: 9898
